# CPP-Tasks

./: main.cpp
Task1 Feistel/: CMakeLists.txt
Task1 Feistel/data/: b.txt
Task2 Contours/: CMakeLists.txt  main.cpp
Task3 CGR/: CMakeLists.txt  main.cpp
data/: key.txt
